# noah123d

./: 404.html  OCP_VIEWER_TROUBLESHOOTING.md  README.md  REFACTORING_SUMMARY.md  TEXT_EDITOR_README.md  arc.3mf  ark.toml  box_model.stl  complex_assembly.3mf  debug_grid.py  example_specialized.3mf  grid_1x5.3mf  grid_2x2.3mf  grid_auto.3mf  index.html  mkdocs.yml  modify_text_demo.py  objects.inv  pyproject.toml  sitemap.xml  text.3mf  text1a.3mf
.github/: copilot-instructions.md
a7d/: cog_helpers.py  collect_init.py  fix_title_case.py  run_cog.py  spell_checking.py  update_init.py
changelog/: index.html
context-functions/: index.html
decorator-implementation/: index.html
docs/: README.md  changelog.md  colormap-helper-guide.md  colormap-helper-implementation.md  context-functions.md  decorator-implementation.md  index.md  structure.md
examples/: ANALYZER_README.md  GRID_LAYOUT_README.md  MULTI_STL_ASSEMBLY_README.md  README.md  STL_CONVERTER_README.md  analyze_assembly.py  analyze_text_3mf.py  analyzer_3mf.py  base_model_with_parameters.py  complete_context_demo.py  complete_text_analysis.py  context_aware_demo.py  context_functions_demo.py  debug_detailed.py  debug_multi_assembly.py  debug_ocp_viewer.py  decorator_comparison.py  detailed_text_analysis.py  example_3mf.py  example_3mf_analysis.py  example_advanced_converter.py  example_advanced_usage.py  example_batch_processing.py  example_cadquery.py  example_colormap_helper.py  example_grid_layout.py  example_multi_assembly.py  example_multi_stl_assembly.py  example_ocp_colormap.py  example_one.py  (+8 more)
(+152 files in other folders)
